--- a/workbook1.ipynb
+++ b/workbook1.ipynb
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,10 +55,40 @@
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting numpy\n",
+      "  Downloading numpy-2.2.3-cp312-cp312-macosx_10_13_x86_64.whl.metadata (62 kB)\n",
+      "Downloading numpy-2.2.3-cp312-cp312-macosx_10_13_x86_64.whl (20.9 MB)\n",
+      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m20.9/20.9 MB\u001b[0m \u001b[31m21.3 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0ma \u001b[36m0:00:01\u001b[0m\n",
+      "\u001b[?25hInstalling collected packages: numpy\n",
+      "Successfully installed numpy-2.2.3\n",
+      "Note: you may need to restart the kernel to use updated packages.\n",
+      "Collecting pandas\n",
+      "  Downloading pandas-2.2.3-cp312-cp312-macosx_10_9_x86_64.whl.metadata (89 kB)\n",
+      "Requirement already satisfied: numpy>=1.26.0 in /opt/anaconda3/envs/datajournal/lib/python3.12/site-packages (from pandas) (2.2.3)\n",
+      "Requirement already satisfied: python-dateutil>=2.8.2 in /opt/anaconda3/envs/datajournal/lib/python3.12/site-packages (from pandas) (2.9.0.post0)\n",
+      "Collecting pytz>=2020.1 (from pandas)\n",
+      "  Downloading pytz-2025.1-py2.py3-none-any.whl.metadata (22 kB)\n",
+      "Collecting tzdata>=2022.7 (from pandas)\n",
+      "  Downloading tzdata-2025.1-py2.py3-none-any.whl.metadata (1.4 kB)\n",
+      "Requirement already satisfied: six>=1.5 in /opt/anaconda3/envs/datajournal/lib/python3.12/site-packages (from python-dateutil>=2.8.2->pandas) (1.16.0)\n",
+      "Downloading pandas-2.2.3-cp312-cp312-macosx_10_9_x86_64.whl (12.5 MB)\n",
+      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m12.5/12.5 MB\u001b[0m \u001b[31m17.6 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0ma \u001b[36m0:00:01\u001b[0m\n",
+      "\u001b[?25hDownloading pytz-2025.1-py2.py3-none-any.whl (507 kB)\n",
+      "Downloading tzdata-2025.1-py2.py3-none-any.whl (346 kB)\n",
+      "Installing collected packages: pytz, tzdata, pandas\n",
+      "Successfully installed pandas-2.2.3 pytz-2025.1 tzdata-2025.1\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    }
+   ],
    "source": [
-    "#%pip install numpy\n",
-    "#%pip install pandas"
+    "%pip install numpy\n",
+    "%pip install pandas"
    ]
   },
   {
@@ -72,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,11 +118,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 0  1  2  3  4  5  6  7  8  9 10 11 12 13 14 15 16 17 18 19 20 21 22 23\n",
+      " 24 25 26 27 28 29 30 31 32 33 34 35 36 37 38 39 40 41 42 43 44 45 46 47\n",
+      " 48 49 50 51 52 53 54 55 56 57 58 59 60 61 62 63 64 65 66 67 68 69 70 71\n",
+      " 72 73 74 75 76 77 78 79 80 81 82 83 84 85 86 87 88 89 90 91 92 93 94 95\n",
+      " 96 97 98 99]\n"
+     ]
+    }
+   ],
    "source": [
-    "#A1 your code here:"
+    "#A1 your code here:\n",
+    "print(random_list)"
    ]
   },
   {
@@ -153,16 +196,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "90\n",
+      "[10 11 12 13 14 15 16 17 18 19 20]\n",
+      "[90 91 92 93 94 95 96 97 98 99]\n"
+     ]
+    }
+   ],
    "source": [
     "#A2 your code here:\n",
     "#print the element at index 90 of the array\n",
+    "print(random_list[90])\n",
     "\n",
     "#print the elements from index 10 to index 20\n",
+    "print(random_list[10:21])\n",
     "\n",
-    "#print the last 10 elements of the array"
+    "#print the last 10 elements of the array\n",
+    "print(random_list[-10:])"
    ]
   },
   {
@@ -225,30 +281,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0.         0.69314718 1.09861229 1.38629436 1.60943791 1.79175947\n",
-      " 1.94591015 2.07944154 2.19722458 2.30258509 2.39789527 2.48490665\n",
-      " 2.56494936 2.63905733 2.7080502  2.77258872 2.83321334 2.89037176\n",
-      " 2.94443898 2.99573227 3.04452244 3.09104245 3.13549422 3.17805383\n",
-      " 3.21887582 3.25809654 3.29583687 3.33220451 3.36729583 3.40119738\n",
-      " 3.4339872  3.4657359  3.49650756 3.52636052 3.55534806 3.58351894\n",
-      " 3.61091791 3.63758616 3.66356165 3.68887945 3.71357207 3.73766962\n",
-      " 3.76120012 3.78418963 3.80666249 3.8286414  3.8501476  3.87120101\n",
-      " 3.8918203  3.91202301 3.93182563 3.95124372 3.97029191 3.98898405\n",
-      " 4.00733319 4.02535169 4.04305127 4.06044301 4.07753744 4.09434456\n",
-      " 4.11087386 4.12713439 4.14313473 4.15888308 4.17438727 4.18965474\n",
-      " 4.20469262 4.21950771 4.2341065  4.24849524 4.26267988 4.27666612\n",
-      " 4.29045944 4.30406509 4.31748811 4.33073334 4.34380542 4.35670883\n",
-      " 4.36944785 4.38202663 4.39444915 4.40671925 4.41884061 4.4308168\n",
-      " 4.44265126 4.4543473  4.46590812 4.47733681 4.48863637 4.49980967\n",
-      " 4.51085951 4.52178858 4.53259949 4.54329478 4.55387689 4.56434819\n",
-      " 4.57471098 4.58496748 4.59511985 4.60517019]\n"
+      "[      -inf 0.         0.69314718 1.09861229 1.38629436 1.60943791\n",
+      " 1.79175947 1.94591015 2.07944154 2.19722458 2.30258509 2.39789527\n",
+      " 2.48490665 2.56494936 2.63905733 2.7080502  2.77258872 2.83321334\n",
+      " 2.89037176 2.94443898 2.99573227 3.04452244 3.09104245 3.13549422\n",
+      " 3.17805383 3.21887582 3.25809654 3.29583687 3.33220451 3.36729583\n",
+      " 3.40119738 3.4339872  3.4657359  3.49650756 3.52636052 3.55534806\n",
+      " 3.58351894 3.61091791 3.63758616 3.66356165 3.68887945 3.71357207\n",
+      " 3.73766962 3.76120012 3.78418963 3.80666249 3.8286414  3.8501476\n",
+      " 3.87120101 3.8918203  3.91202301 3.93182563 3.95124372 3.97029191\n",
+      " 3.98898405 4.00733319 4.02535169 4.04305127 4.06044301 4.07753744\n",
+      " 4.09434456 4.11087386 4.12713439 4.14313473 4.15888308 4.17438727\n",
+      " 4.18965474 4.20469262 4.21950771 4.2341065  4.24849524 4.26267988\n",
+      " 4.27666612 4.29045944 4.30406509 4.31748811 4.33073334 4.34380542\n",
+      " 4.35670883 4.36944785 4.38202663 4.39444915 4.40671925 4.41884061\n",
+      " 4.4308168  4.44265126 4.4543473  4.46590812 4.47733681 4.48863637\n",
+      " 4.49980967 4.51085951 4.52178858 4.53259949 4.54329478 4.55387689\n",
+      " 4.56434819 4.57471098 4.58496748 4.59511985]\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/c9/ps3fllkj6gx0m_k9fzgpf_cw0000gn/T/ipykernel_63050/594912077.py:1: RuntimeWarning: divide by zero encountered in log\n",
+      "  print(np.log(random_list))\n"
      ]
     }
    ],
@@ -272,25 +336,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[False  True False  True False  True False  True False  True False  True\n",
-      " False  True False  True False  True False  True False  True False  True\n",
-      " False  True False  True False  True False  True False  True False  True\n",
-      " False  True False  True False  True False  True False  True False  True\n",
-      " False  True False  True False  True False  True False  True False  True\n",
-      " False  True False  True False  True False  True False  True False  True\n",
-      " False  True False  True False  True False  True False  True False  True\n",
-      " False  True False  True False  True False  True False  True False  True\n",
-      " False  True False  True]\n",
-      "[  2   4   6   8  10  12  14  16  18  20  22  24  26  28  30  32  34  36\n",
-      "  38  40  42  44  46  48  50  52  54  56  58  60  62  64  66  68  70  72\n",
-      "  74  76  78  80  82  84  86  88  90  92  94  96  98 100]\n"
+      "[ True False  True False  True False  True False  True False  True False\n",
+      "  True False  True False  True False  True False  True False  True False\n",
+      "  True False  True False  True False  True False  True False  True False\n",
+      "  True False  True False  True False  True False  True False  True False\n",
+      "  True False  True False  True False  True False  True False  True False\n",
+      "  True False  True False  True False  True False  True False  True False\n",
+      "  True False  True False  True False  True False  True False  True False\n",
+      "  True False  True False  True False  True False  True False  True False\n",
+      "  True False  True False]\n",
+      "[ 0  2  4  6  8 10 12 14 16 18 20 22 24 26 28 30 32 34 36 38 40 42 44 46\n",
+      " 48 50 52 54 56 58 60 62 64 66 68 70 72 74 76 78 80 82 84 86 88 90 92 94\n",
+      " 96 98]\n"
      ]
     }
    ],
@@ -314,16 +378,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[  2   4   6   8  10  12  14  16  18  20  22  24  26  28  30  32  34  36\n",
-      "  38  40  42  44  46  48  50  52  54  56  58  60  62  64  66  68  70  72\n",
-      "  74  76  78  80  82  84  86  88  90  92  94  96  98 100 102 104 106 108\n",
+      "[  0   2   4   6   8  10  12  14  16  18  20  22  24  26  28  30  32  34\n",
+      "  36  38  40  42  44  46  48  50  52  54  56  58  60  62  64  66  68  70\n",
+      "  72  74  76  78  80  82  84  86  88  90  92  94  96  98 102 104 106 108\n",
       " 110 112 114 116 118 120 122 124 126 128 130 132 134 136 138 140 142 144\n",
       " 146 148 150 152 154 156 158 160 162 164 166 168 170 172 174 176 178 180\n",
       " 182 184 186 188 190 192 194 196 198 200]\n"
@@ -357,9 +421,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 29,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[3. 1. 4. 1. 5.]\n"
+     ]
+    }
+   ],
    "source": [
     "#A3 your code here\n",
     "test_list = np.array([ -99.52287875, -100.        ,  -99.39794001, -100.        ,\n",
@@ -367,7 +439,11 @@
     "        -99.30103   ,  -99.52287875,  -99.30103   ,  -99.09691001,\n",
     "        -99.04575749,  -99.15490196,  -99.04575749,  -99.52287875,\n",
     "        -99.69897   ,  -99.52287875,  -99.09691001,  -99.39794001,\n",
-    "        -99.22184875,  -99.69897   ,  -99.22184875,  -99.39794001])"
+    "        -99.22184875,  -99.69897   ,  -99.22184875,  -99.39794001])\n",
+    "test_list = test_list + 100\n",
+    "test_list = np.power(10,test_list)\n",
+    "test_list = np.round(test_list)\n",
+    "print(test_list[:5])\n"
    ]
   },
   {
@@ -395,7 +471,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -549,7 +625,7 @@
        "[1704 rows x 6 columns]"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -583,7 +659,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -607,7 +683,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -780,7 +856,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -934,7 +1010,7 @@
        "[568 rows x 6 columns]"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -966,12 +1042,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "      year    gdpPercap\n",
+      "1609  1957  14847.12712\n",
+      "1611  1967  19530.36557\n",
+      "1613  1977  24072.63213\n",
+      "1615  1987  29884.35041\n",
+      "1617  1997  35767.43303\n",
+      "1619  2007  42951.65309\n"
+     ]
+    }
+   ],
    "source": [
-    "#B1: your code here"
+    "#B1: your code here\n",
+    "great_gapminder = gapminder[gapminder['country'] == 'United States']\n",
+    "great_gapminder = great_gapminder[great_gapminder['year'] % 10 == 7]\n",
+    "print(great_gapminder[['year','gdpPercap']])\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -1002,7 +1100,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "info2950FA24",
+   "display_name": "datajournal",
    "language": "python",
    "name": "python3"
   },
@@ -1016,7 +1114,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.4"
+   "version": "3.12.9"
   }
  },
  "nbformat": 4,
