--- a/workbook3.ipynb
+++ b/workbook3.ipynb
@@ -1042,7 +1042,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -1149,7 +1149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -1308,7 +1308,7 @@
        "4  Basketball Men's Basketball  Gold  "
       ]
      },
-     "execution_count": 21,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1331,7 +1331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -1367,35 +1367,15 @@
           "John Houston Stockton"
          ],
          "type": "scatter",
-         "x": [
-          198,
-          205,
-          200,
-          213,
-          205,
-          198,
-          211,
-          205,
-          200,
-          200,
-          216,
-          185
-         ],
+         "x": {
+          "bdata": "AAAAAADAaEAAAAAAAKBpQAAAAAAAAGlAAAAAAACgakAAAAAAAKBpQAAAAAAAwGhAAAAAAABgakAAAAAAAKBpQAAAAAAAAGlAAAAAAAAAaUAAAAAAAABrQAAAAAAAIGdA",
+          "dtype": "f8"
+         },
          "xaxis": "x",
-         "y": [
-          114,
-          100,
-          101,
-          109,
-          100,
-          90,
-          107,
-          116,
-          98,
-          102,
-          107,
-          79
-         ],
+         "y": {
+          "bdata": "AAAAAACAXEAAAAAAAABZQAAAAAAAQFlAAAAAAABAW0AAAAAAAABZQAAAAAAAgFZAAAAAAADAWkAAAAAAAABdQAAAAAAAgFhAAAAAAACAWUAAAAAAAMBaQAAAAAAAwFNA",
+          "dtype": "f8"
+         },
          "yaxis": "y"
         }
        ],
@@ -1584,57 +1564,6 @@
              ]
             ],
             "type": "heatmap"
-           }
-          ],
-          "heatmapgl": [
-           {
-            "colorbar": {
-             "outlinewidth": 0,
-             "ticks": ""
-            },
-            "colorscale": [
-             [
-              0,
-              "#0d0887"
-             ],
-             [
-              0.1111111111111111,
-              "#46039f"
-             ],
-             [
-              0.2222222222222222,
-              "#7201a8"
-             ],
-             [
-              0.3333333333333333,
-              "#9c179e"
-             ],
-             [
-              0.4444444444444444,
-              "#bd3786"
-             ],
-             [
-              0.5555555555555556,
-              "#d8576b"
-             ],
-             [
-              0.6666666666666666,
-              "#ed7953"
-             ],
-             [
-              0.7777777777777778,
-              "#fb9f3a"
-             ],
-             [
-              0.8888888888888888,
-              "#fdca26"
-             ],
-             [
-              1,
-              "#f0f921"
-             ]
-            ],
-            "type": "heatmapgl"
            }
           ],
           "histogram": [
@@ -1835,6 +1764,17 @@
              }
             },
             "type": "scattergl"
+           }
+          ],
+          "scattermap": [
+           {
+            "marker": {
+             "colorbar": {
+              "outlinewidth": 0,
+              "ticks": ""
+             }
+            },
+            "type": "scattermap"
            }
           ],
           "scattermapbox": [
