--- a/workbook2.ipynb
+++ b/workbook2.ipynb
@@ -617,7 +617,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -702,7 +702,7 @@
        "4  tm84618  Cybill Shepherd                    Betsy  Taxi Driver         8.2"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -755,11 +755,98 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 34,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>name</th>\n",
+       "      <th>count</th>\n",
+       "      <th>score</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Martin Scorsese</td>\n",
+       "      <td>6</td>\n",
+       "      <td>8.160000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Mani Ratnam</td>\n",
+       "      <td>6</td>\n",
+       "      <td>7.733333</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Song Hyun-wook</td>\n",
+       "      <td>6</td>\n",
+       "      <td>7.375000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Anurag Kashyap</td>\n",
+       "      <td>8</td>\n",
+       "      <td>7.271429</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Shannon Hartman</td>\n",
+       "      <td>7</td>\n",
+       "      <td>7.257143</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "              name  count     score\n",
+       "0  Martin Scorsese      6  8.160000\n",
+       "1      Mani Ratnam      6  7.733333\n",
+       "2   Song Hyun-wook      6  7.375000\n",
+       "3   Anurag Kashyap      8  7.271429\n",
+       "4  Shannon Hartman      7  7.257143"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "#C1 your code here"
+    "#C1 your code here\n",
+    "directors = duckdb.sql(\"\"\"SELECT name, COUNT() AS count, AVG(imdb_score) AS score\n",
+    "                        FROM credits\n",
+    "                        LEFT JOIN titles ON credits.id = titles.id\n",
+    "                        WHERE role = 'DIRECTOR'\n",
+    "                        GROUP BY name\"\"\").df()\n",
+    "\n",
+    "top_directors = duckdb.sql(\"\"\"SELECT *\n",
+    "                           FROM directors\n",
+    "                           WHERE count > 5\n",
+    "                           ORDER BY score DESC\"\"\").df()\n",
+    "\n",
+    "top_directors.head()"
    ]
   },
   {
