--- a/workbook4a.ipynb
+++ b/workbook4a.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -134,7 +134,7 @@
        "4  Afghanistan      Asia  1972   36.088  13079460  739.981106"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -147,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -269,7 +269,7 @@
        "4       0        0  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -282,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -410,7 +410,7 @@
        "Oceania   -6.185896e-02  1.000000e+00  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -422,7 +422,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -431,7 +431,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -440,7 +440,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -449,7 +449,7 @@
        "Text(0, 0.5, 'Actual')"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -472,7 +472,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -481,7 +481,7 @@
        "Text(0, 0.5, 'Actual')"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -505,7 +505,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -514,7 +514,7 @@
        "<Axes: xlabel='gdpPercap', ylabel='None'>"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -536,16 +536,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# sns.scatterplot(y=train[''], x = model.predict(train[inputs]))\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -556,7 +547,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -565,7 +556,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -574,7 +565,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -583,7 +574,7 @@
        "Text(0, 0.5, 'Residual')"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -607,7 +598,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -616,7 +607,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -625,7 +616,7 @@
        "4.582374627265793"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -633,6 +624,53 @@
    "source": [
     "mean_absolute_error(y_true=train['lifeExp'], y_pred=model.predict(train[inputs]))\n",
     "mean_absolute_error(y_true=test['lifeExp'], y_pred=model.predict(test[inputs]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                                 OLS Regression Results                                \n",
+      "=======================================================================================\n",
+      "Dep. Variable:                lifeExp   R-squared (uncentered):                   0.991\n",
+      "Model:                            OLS   Adj. R-squared (uncentered):              0.991\n",
+      "Method:                 Least Squares   F-statistic:                          1.907e+04\n",
+      "Date:                Thu, 13 Mar 2025   Prob (F-statistic):                        0.00\n",
+      "Time:                        18:00:56   Log-Likelihood:                         -3768.5\n",
+      "No. Observations:                1192   AIC:                                      7551.\n",
+      "Df Residuals:                    1185   BIC:                                      7587.\n",
+      "Df Model:                           7                                                  \n",
+      "Covariance Type:            nonrobust                                                  \n",
+      "==============================================================================\n",
+      "                 coef    std err          t      P>|t|      [0.025      0.975]\n",
+      "------------------------------------------------------------------------------\n",
+      "pop            0.2229      0.065      3.449      0.001       0.096       0.350\n",
+      "gdpPercap      5.4148      0.137     39.493      0.000       5.146       5.684\n",
+      "year           0.2354      0.010     23.539      0.000       0.216       0.255\n",
+      "Americas       7.9860      0.520     15.358      0.000       6.966       9.006\n",
+      "Asia           6.1822      0.457     13.527      0.000       5.286       7.079\n",
+      "Europe        11.0897      0.535     20.710      0.000      10.039      12.140\n",
+      "Oceania       11.6029      1.595      7.276      0.000       8.474      14.731\n",
+      "==============================================================================\n",
+      "Omnibus:                       38.074   Durbin-Watson:                   2.005\n",
+      "Prob(Omnibus):                  0.000   Jarque-Bera (JB):               43.017\n",
+      "Skew:                          -0.399   Prob(JB):                     4.56e-10\n",
+      "Kurtosis:                       3.479   Cond. No.                         349.\n",
+      "==============================================================================\n",
+      "\n",
+      "Notes:\n",
+      "[1] R² is computed without centering (uncentered) since the model does not contain a constant.\n",
+      "[2] Standard Errors assume that the covariance matrix of the errors is correctly specified.\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(model.summary())"
    ]
   }
  ],
