--- a/workbook4a.ipynb
+++ b/workbook4a.ipynb
@@ -607,23 +607,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "4.582374627265793"
-      ]
-     },
-     "execution_count": 19,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4.398039801468953\n",
+      "4.582374627265793\n"
+     ]
     }
    ],
    "source": [
-    "mean_absolute_error(y_true=train['lifeExp'], y_pred=model.predict(train[inputs]))\n",
-    "mean_absolute_error(y_true=test['lifeExp'], y_pred=model.predict(test[inputs]))"
+    "print(mean_absolute_error(y_true=train['lifeExp'], y_pred=model.predict(train[inputs])))\n",
+    "print(mean_absolute_error(y_true=test['lifeExp'], y_pred=model.predict(test[inputs])))"
    ]
   },
   {
